[metadata]
name = deelight
author = Johannes Hoppe
author-email = info@johanneshoppe.com
summary = Daylight mode for Xiaomi Mi Yeelight bulbs and lights.
description-file = README.rst
description-content-type = text/x-rst; charset=UTF-8
home-page = https://github.com/codingjoe/yeelight-daylight
license = Apache-2
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Framework :: AsyncIO
    Topic :: Home Automation

keywords =
    light
    yeelight
    xiaomi
    iot
    home-automation
    upnp
    asyncio

[files]
packages =
    deelight

[entry_points]
console_scripts =
    deelight = deelight.__main__:main
