[metadata]
name = deelight
author = Johannes Maron
author_email = info@johanneshoppe.com
description = Daylight mode for Xiaomi Mi Yeelight bulbs and lights.
long_description = file: README.rst
url = https://github.com/codingjoe/yeelight-daylight
license = MIT
license_file = LICENSE
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Framework :: AsyncIO
    Topic :: Home Automation

keywords =
    light
    yeelight
    xiaomi
    iot
    home-automation
    upnp
    asyncio
python_requires = '>=3.7'

[options]
packages = deelight
install_requires =
    yeelib>=2.1.0
    click
    pysolar
setup_requires =
    setuptools_scm

[options.entry_points]
console_scripts =
    deelight = deelight.__main__:main

[bdist_wheel]
universal = 1

[flake8]
max-line-length=88
select = C,E,F,W,B,B950
ignore = E203, E501, W503, E731

[pydocstyle]
add_ignore = D1

[isort]
atomic = true
line_length = 88
known_first_party = deelight, tests
include_trailing_comma = True
default_section=THIRDPARTY
combine_as_imports = true
